# zhuk

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/zhuk/: downloader.py  main.py  matcher.py  spotify.py
tests/: test_downloader.py  test_main.py  test_spotify.py
zhuk/: __init__.py
