[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[project]
name = "zhuk"
version = "0.1.0"
description = "Download Spotify tracks and playlists as MP3 from YouTube"
requires-python = ">=3.10"
dependencies = [
    "mutagen>=1.47.0",
    "spotipy>=2.26.0",
    "yt-dlp>=2026.3.13",
    "python-dotenv>=1.2.2",
]

[project.scripts]
zhuk = "zhuk.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]
